--- a/src/scss/03_Parts/button.scss
+++ b/src/scss/03_Parts/button.scss
@@ -47,13 +47,23 @@
 
 %btnBase {
     /* //_{#can-inline-block */
+    /* //_{@modern */
+    display      : -moz-inline-box;
+    display      : inline-table;
+    /* //_}@modern */
     display      : inline-block;
     /* //_}#can-inline-block */
     border-width : 2px;
     cursor       : pointer;
     text-align   : center;
+    /* //_{@modern */
+    line-height  : $BASE_LINE_HEIGHT_EM;
+    padding      : 0 1em;
+    /* //_}@modern */
+    /* //_{^@modern */
     line-height  : 1;
     padding      : #{($BASE_LINE_HEIGHT_EM - 1em ) / 2} 1em;
+    /* //_}^@modern */
     /* //_{@modern,@ie9 */
     vertical-align : top; /* ie9-11 で 日本語を含むボタンと、英字のみで高さが揃わない。 */
     /* //_}@modern,@ie9 */
@@ -102,6 +112,10 @@
 }
 
 input.btn {
+/* //_{@modern */
+    line-height : 1;
+    padding     : #{($BASE_LINE_HEIGHT_EM - 1em ) / 2} 1em; /* Gecko ~1.8 */
+/* //_}@modern */
 /* //_{@ie5win,@ie55 */
     padding : .3em 1em #{$BASE_LINE_HEIGHT_EM - 1.3em};
 /* //_}@ie5win,@ie55 */
