--- a/src/scss/07_Library/SidebarFixer.scss
+++ b/src/scss/07_Library/SidebarFixer.scss
@@ -37,7 +37,7 @@
             overflow : visible;
         }
         /* override Gecko 1.4~1.8.1 */
-        .lW [_csshack_="_:lang(x)"] {
+        .lW [_lazyhack_="_:lang(x)"] {
             overflow : hidden;
         }
     }
